--- a/style.css
+++ b/style.css
@@ -45,6 +45,15 @@ h2{
     font-weight: bold;
 }
 #about h3{
-    color: rgb(124, 124, 124);
+    color: rgb(125, 125, 125);
 }
-
+#project{
+    margin: 60px auto;
+    width: 80%;
+}
+#project h2{
+    text-align: center;
+}
+#project .card img{
+    width: 100%; 
+}
