--- a/style.css
+++ b/style.css
@@ -49,30 +49,36 @@ a.font-black{
 #about h3{
     color: rgb(0, 0, 0);
 }
-#project{
-    margin: 60px auto;
-    width: 80%;
+
+
+
+
+#projects{
+    color: black;
+    font-style: bold;
+    font-size: 20px;
     display: flex;
-}
-#project h2{
+    flex-direction: column;
+    align-items: center;
+  }
+ 
+  .btn-group .button {
+    background-color: hsl(180, 1%, 42%); /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
     text-align: center;
-}
-.card-1 img{
-    width: 20%;
-    height: 20%;
-    float: left;
+    display: inline-block;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 5%;
+  }
+  .btn-group .button:hover {
+    background-color: #202120;
+  }
 
-}
-.card-1 .card-body{
-    float: right;
-}
-.card-2 img{
-    width: 20%;
-    height: 20%;
-    float: left;
 
-}
-.card-body{
-    float: right;
-}
+
+
+
 
