--- a/style.css
+++ b/style.css
@@ -1,14 +1,18 @@
-* {
+.body{
+    font-family: monospace;
+
+}
+*{
     margin:0%;
     color: black;
 }
 
-.container-fluid span{
+.container span{
     color: cyan;  
     font-weight: bold;
 }
 
-.container-fluid a{
+.container a{
     font-style: normal;
 }
 .title-icon{
@@ -54,13 +58,22 @@ a.font-black{
 
 
 #projects{
-    color: black;
-    font-style: bold;
-    font-size: 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
+   margin: 60px auto;
+   width: 80%;
+}
+#projects h2{
+    text-align: center;
+
+}
+#projects .card img{
+    width: 100%;
+
+}
+#projects .card-title{
+    font-weight: bold;
+}
+
+  
  
   .btn-group .button {
     background-color: hsl(180, 1%, 42%); /* Green */
@@ -76,6 +89,7 @@ a.font-black{
   .btn-group .button:hover {
     background-color: #202120;
   }
+
 
 
 
